--- a/assignment4/package.json
+++ b/assignment4/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular-material-icons": "^0.7.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^5.4.2",
